# fictional-doodle

./: README.md  pubspec.yaml
lib/: main.dart
lib/shared/services/ffi/: ffi.service.dart
linux/: CMakeLists.txt  my_application.cc
linux/custom_programs/: CMakeLists.txt
linux/custom_programs/testprogram/: CMakeLists.txt  main.cpp
test/: widget_test.dart
